src/test/deca/context/invalid/print_boolean.deca
/*
    Description : Tests sur l'affichage d'un booléen

    Résultat : erreur renvoyée
*/
{
    boolean x = true;
    println(x);
}
// @expected_output deca:7:4:
